--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <div class="row">
             <div class="col-xs-12">
                 <h2>10 Second Math Game</h2>
-                
+                <h1 id="problem"></h1>
+                <input id="user-input" type="number" />
             </div>
         </div>
     </div>
