--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <div class="row">
             <div class="col-xs-12">
                 <h2>10 Second Math Game</h2>
+                <h3 id="time-left"></h3>
+                <p>Seconds Left</p>
                 <h1 id="problem"></h1>
                 <input id="user-input" type="number" />
+                <h4>Score: <span id="score"></span></h4>
             </div>
         </div>
     </div>
