--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <h1 id="problem"></h1>
                 <input id="user-input" type="number" />
                 <h4>Score: <span id="score"></span></h4>
+                <h4>High Score: <span id="high-score"></span></h4>
+                <h4>Max Number <input id="range" type="number" value="10" /></h4>
             </div>
         </div>
     </div>
