--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>10 Second Math Game</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="index.css" rel="stylesheet" type="text/css" />
     <script src="index.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container text-center">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col">
                 <h2>10 Second Math Game</h2>
                 <h3 id="time-left"></h3>
                 <p>Seconds Left</p>
@@ -19,7 +19,7 @@
                 <input id="user-input" type="number" />
                 <h4>Score: <span id="score"></span></h4>
                 <h4>High Score: <span id="high-score"></span></h4>
-                <h4>Max Number <input id="range" type="number" value="10" /></h4>
+                <h4>Max Number: <input id="range" type="number" value="10" /></h4>
             </div>
         </div>
     </div>
